--- a/imgui.ini
+++ b/imgui.ini
@@ -16,12 +16,12 @@ Collapsed=0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1920,1009
+Size=1280,720
 Collapsed=0
 
 [Window][CHIP8-Emulator]
 Pos=8,8
-Size=1357,650
+Size=717,409
 Collapsed=0
 DockId=0x00000003,0
 
@@ -32,23 +32,23 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Debug Menu]
-Pos=1367,8
-Size=545,650
+Pos=727,8
+Size=545,409
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Info]
-Pos=8,660
-Size=1904,341
+Pos=8,419
+Size=1264,293
 Collapsed=0
 DockId=0x00000006,0
 
 [Docking][Data]
-DockSpace       ID=0x3A6D4EE5 Window=0x3DA2F1DE Pos=8,8 Size=1904,993 Split=Y Selected=0xDD540C55
+DockSpace       ID=0x3A6D4EE5 Window=0x3DA2F1DE Pos=8,8 Size=1264,704 Split=Y Selected=0xDD540C55
   DockNode      ID=0x00000001 Parent=0x3A6D4EE5 SizeRef=1904,577 Split=Y Selected=0xDD540C55
-    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=2871,650 Split=X Selected=0xDD540C55
-      DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=1357,554 CentralNode=1 HiddenTabBar=1 Selected=0xDD540C55
+    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=2871,409 Split=X Selected=0xDD540C55
+      DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=1357,554 CentralNode=1 Selected=0xDD540C55
       DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=545,554 Selected=0xD641283D
-    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=2871,341 Selected=0x928212AD
+    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=2871,293 Selected=0x928212AD
   DockNode      ID=0x00000002 Parent=0x3A6D4EE5 SizeRef=1904,485 Selected=0x2E2B0007
 
